# WARMER2025_R4

./: CMakeLists.txt  README.md  partitions_config.csv  sdkconfig.defaults  switch.bat
components/app_warmer_mngr/: CMakeLists.txt  app_warmer_mngr.c  app_warmer_mngr.h
components/common/: app_cfg.h  common_hdr.h
components/esp_lcd_gc9a01/: esp_lcd_gc9a01.c
components/esp_lcd_gc9a01/include/: esp_lcd_gc9a01.h
components/hwa_adc/: CMakeLists.txt  hwa_adc.c  hwa_adc.h  hwa_adc_ext.h
components/hwa_gpio/: hwa_gpio.c  hwa_gpio.h  hwa_gpio_ext.h
components/services/: CMakeLists.txt  app_buzzer.c  app_buzzer.h  app_heater.c  app_heater.h  app_motor.c  app_motor.h  app_notification.c  app_notification.h  app_vibrator.c  app_vibrator.h  encoder.c  encoder.h
components/srvc_button/: CMakeLists.txt  srvc_button.c  srvc_button.h  srvc_button_ext.h
components/srvc_param/: srvc_param.c  srvc_param.h  srvc_param_ext.h
components/srvc_ps_mon/: CMakeLists.txt  srvc_ps_mon.c  srvc_ps_mon.h  srvc_ps_mon_ext.h
components/srvc_thermistor/: CMakeLists.txt  srvc_thermistor.c  srvc_thermistor.h  srvc_thermistor_ext.h
components/ui/: CMakeLists.txt  Make.txt  filelist.txt  lv_i18n.c  ui.c  ui.h  ui_common.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/fonts/: ui_font_Segoe_UI_B85.c  ui_font_Segoe_UI_SB14.c  ui_font_Segoe_UI_SB50.c  ui_font_Segoe_UI_SB57.c  ui_font_Segoe_UI_SB65.c  ui_font_WIGG_B20.c  ui_font_WIGG_B35.c
components/ui/images_compressed/: ui_img_about_png.c  ui_img_babyfood_png.c  ui_img_bat_bar_png.c  ui_img_bat_full_png.c  ui_img_bat_low_png.c  ui_img_bat_png.c  ui_img_battery_png.c  ui_img_ble_app_png.c  ui_img_ble_png.c  ui_img_bottlelarge_png.c  ui_img_bottlesmall_png.c  ui_img_charging_png.c  ui_img_chargingui_s_png.c  ui_img_defreeze_png.c  ui_img_deodorize_png.c  ui_img_e1_png.c  ui_img_e2_png.c  ui_img_fail_png.c  ui_img_failed_png.c  ui_img_fc_240_png.c  ui_img_fc_wigg_180_png.c  ui_img_fc_wigg_200_png.c  ui_img_fc_wigg_png.c  ui_img_heating_pwr_png.c  ui_img_heatmodes_png.c  ui_img_iconback_png.c  ui_img_keeping_warm_off_png.c  ui_img_keeping_warm_png.c  ui_img_language_png.c  ui_img_maintain_time_png.c  ui_img_milk_png.c  ui_img_notification_png.c  ui_img_poweroff_png.c  ui_img_qrcodeapp_png.c  ui_img_qrcodeavoidleaking_png.c  ui_img_qrcodewebsite_png.c  ui_img_select_png.c  ui_img_selected_png.c  ui_img_temp_c_png.c  ui_img_temp_ci_png.c  (+12 more)
components/ui/language/translations/: en-US.yml  ja-JP.yml  ko-KR.yml  zh-SG.yml
components/ui/screens/: ui_About.c  ui_BluetoothApp.c  ui_BottleSize.c  ui_Done.c  ui_Error.c  ui_HeatingModes.c  ui_HeatingPower.c  ui_KeepWarm.c  ui_Language.c  ui_Main.c  ui_Menu.c  ui_Notification.c  ui_OTA.c  ui_Selected.c  ui_SplashWigg.c  ui_TempSetting.c  ui_TempUnitSetting.c  ui_Thermometer.c  ui_ThermometerReading.c  ui_UserInstruction.c  ui_Warming.c
main/: CMakeLists.txt  Kconfig.projbuild  app_ble.h  app_ble_4.c  app_ble_ota.c  app_ble_ota.h  app_main.c  app_main.h  app_pm.c  app_pm.h  idf_component.yml  lcd_task.c  lcd_task.h
